--- a/src/components/SolarSystem.css
+++ b/src/components/SolarSystem.css
@@ -4,9 +4,7 @@
 
 .sun {
     position: absolute;
-}
-
-.sun img {
-    width: 50px;
-    height: 50px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
